--- a/ios/TodoApp/TodoApp/Supporting Files/Base.lproj/Main.storyboard
+++ b/ios/TodoApp/TodoApp/Supporting Files/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="ipad12_9" orientation="landscape" layout="fullscreen" appearance="light"/>
+    <device id="ipad11_0rounded" orientation="landscape" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -14,17 +14,17 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="TodoListContainerViewController" customModule="TodoApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1194" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="TO-DO LIST" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x2A-Sn-k6t">
-                                <rect key="frame" x="30" y="50" width="1260.5" height="50.5"/>
+                                <rect key="frame" x="30" y="54" width="1088.5" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wRT-5E-WhS">
-                                <rect key="frame" x="1280.5" y="56.5" width="55.5" height="38"/>
+                                <rect key="frame" x="1108.5" y="35" width="55.5" height="38"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="line.3.horizontal" catalog="system">
                                     <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="20"/>
@@ -32,28 +32,28 @@
                                 </buttonConfiguration>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="bgk-Gp-o1q">
-                                <rect key="frame" x="30" y="130.5" width="1306" height="863.5"/>
+                                <rect key="frame" x="30" y="84" width="1134" height="700"/>
                                 <subviews>
                                     <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y7N-v5-3dX">
-                                        <rect key="frame" x="0.0" y="0.0" width="314.5" height="863.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="271.5" height="700"/>
                                         <connections>
                                             <segue destination="gRH-8F-LhW" kind="embed" id="1fr-ZW-F0G"/>
                                         </connections>
                                     </containerView>
                                     <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="psB-DY-ZWk">
-                                        <rect key="frame" x="330.5" y="0.0" width="314.5" height="863.5"/>
+                                        <rect key="frame" x="287.5" y="0.0" width="271.5" height="700"/>
                                         <connections>
                                             <segue destination="SUv-lW-eLq" kind="embed" id="3QM-Df-Kdo"/>
                                         </connections>
                                     </containerView>
                                     <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="86M-EQ-6p4">
-                                        <rect key="frame" x="661" y="0.0" width="314.5" height="863.5"/>
+                                        <rect key="frame" x="575" y="0.0" width="271.5" height="700"/>
                                         <connections>
                                             <segue destination="HRI-Ax-t3w" kind="embed" id="0wK-qX-oX7"/>
                                         </connections>
                                     </containerView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O51-7u-hjR">
-                                        <rect key="frame" x="991.5" y="0.0" width="314.5" height="863.5"/>
+                                        <rect key="frame" x="862.5" y="0.0" width="271.5" height="700"/>
                                         <color key="backgroundColor" name="Background"/>
                                     </view>
                                 </subviews>
@@ -63,11 +63,11 @@
                                 </constraints>
                             </stackView>
                             <view contentMode="scaleToFill" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T6I-rc-ba6">
-                                <rect key="frame" x="1010" y="0.0" width="356" height="1024"/>
+                                <rect key="frame" x="882" y="0.0" width="312" height="834"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rpj-db-2Yk">
-                                        <rect key="frame" x="268" y="56" width="58" height="47"/>
+                                        <rect key="frame" x="230" y="54" width="52" height="41"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="xmark" catalog="system">
@@ -76,8 +76,8 @@
                                         </buttonConfiguration>
                                     </button>
                                     <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NV2-Jd-E9z">
-                                        <rect key="frame" x="20" y="142" width="316" height="832"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
+                                        <rect key="frame" x="24" y="103" width="263" height="694"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <connections>
                                             <segue destination="KSp-Il-wTC" kind="embed" id="WNr-np-ufK"/>
                                         </connections>
@@ -118,7 +118,7 @@
             <objects>
                 <viewController id="gRH-8F-LhW" customClass="TodoListViewController" customModule="TodoApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="EYb-uX-avB">
-                        <rect key="frame" x="0.0" y="0.0" width="314.5" height="863.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="271.5" height="700"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="0CZ-Co-eqS"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -133,7 +133,7 @@
             <objects>
                 <viewController id="SUv-lW-eLq" customClass="TodoListViewController" customModule="TodoApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5nf-bJ-Wjv">
-                        <rect key="frame" x="0.0" y="0.0" width="314.5" height="863.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="271.5" height="700"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="hqQ-Uz-iJZ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -148,7 +148,7 @@
             <objects>
                 <viewController id="HRI-Ax-t3w" customClass="TodoListViewController" customModule="TodoApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="l9c-bg-am3">
-                        <rect key="frame" x="0.0" y="0.0" width="314.5" height="863.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="271.5" height="700"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="jhu-lO-tDl"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -163,16 +163,58 @@
             <objects>
                 <viewController id="KSp-Il-wTC" customClass="ActivityListViewController" customModule="TodoApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="GUx-Sh-GtT">
-                        <rect key="frame" x="0.0" y="0.0" width="316" height="832"/>
+                        <rect key="frame" x="0.0" y="0.0" width="263" height="694"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="WNa-kj-xFo">
-                                <rect key="frame" x="0.0" y="44.5" width="316" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="D7n-r4-KkZ">
+                                <rect key="frame" x="0.0" y="44.5" width="263" height="142.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="WNa-kj-xFo" id="2tX-qx-8uv">
-                                    <rect key="frame" x="0.0" y="0.0" width="316" height="43.5"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="D7n-r4-KkZ" id="J1M-xa-My5">
+                                    <rect key="frame" x="0.0" y="0.0" width="263" height="142.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="amR-hq-K44">
+                                            <rect key="frame" x="20" y="20" width="223" height="102.5"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🥳" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="715-3o-CU7">
+                                                    <rect key="frame" x="0.0" y="0.0" width="69.5" height="43"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="36"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="e9x-Gr-4gH">
+                                                    <rect key="frame" x="85.5" y="0.0" width="137.5" height="102"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@Alex" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lMe-ji-9Yh">
+                                                            <rect key="frame" x="0.0" y="0.0" width="137.5" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="해야할 일에 Github 공부하기를 등록하였습니다." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bhh-v7-uAU">
+                                                            <rect key="frame" x="0.0" y="20.5" width="137.5" height="61"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1분 전" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Uh-Yk-6C2">
+                                                            <rect key="frame" x="0.0" y="81.5" width="137.5" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="amR-hq-K44" firstAttribute="top" secondItem="J1M-xa-My5" secondAttribute="top" constant="20" id="0cX-GR-k83"/>
+                                        <constraint firstAttribute="bottom" secondItem="amR-hq-K44" secondAttribute="bottom" constant="20" id="fDm-ai-GNj"/>
+                                        <constraint firstItem="amR-hq-K44" firstAttribute="leading" secondItem="J1M-xa-My5" secondAttribute="leading" constant="20" id="ix4-JN-Cb0"/>
+                                        <constraint firstAttribute="trailing" secondItem="amR-hq-K44" secondAttribute="trailing" constant="20" id="xCj-Ij-NX8"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
@@ -180,7 +222,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VKa-e8-Aw0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="442" y="-386"/>
+            <point key="canvasLocation" x="441.70854271356785" y="-386.69064748201441"/>
         </scene>
     </scenes>
     <resources>
