--- a/ios/TodoApp/TodoApp/Controllers/TodoListViewController.storyboard
+++ b/ios/TodoApp/TodoApp/Controllers/TodoListViewController.storyboard
@@ -64,7 +64,7 @@
                                             <constraint firstAttribute="height" constant="50" id="v6k-5o-aii"/>
                                         </constraints>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" image="plus" catalog="system">
+                                        <buttonConfiguration key="configuration" style="plain" image="plus" catalog="system" title="">
                                             <color key="baseForegroundColor" systemColor="systemGray2Color"/>
                                         </buttonConfiguration>
                                         <connections>
@@ -137,7 +137,9 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
-                                            <outlet property="cardView" destination="lQS-Yz-c7h" id="mGz-Zg-osL"/>
+                                            <outlet property="authorLabel" destination="MoB-RK-nfb" id="QEe-Ul-S0H"/>
+                                            <outlet property="contentLabel" destination="hFd-15-REG" id="IGd-hk-LvG"/>
+                                            <outlet property="titleLabel" destination="7tL-3w-jXg" id="hdY-5N-YXL"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -156,10 +158,10 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="addToDoButton" destination="T45-ro-CGl" id="Pi4-4Q-Ohq"/>
                         <outlet property="badgeLabel" destination="2Rd-hi-6vj" id="M2B-Ah-vuF"/>
                         <outlet property="badgeView" destination="RnH-Pw-IWt" id="ZOs-LT-IFF"/>
                         <outlet property="tableView" destination="Oqo-Nq-vGg" id="yEA-GM-BQp"/>
+                        <outlet property="titleLabel" destination="w3g-LD-Op9" id="4DS-kL-5BQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cM7-Ba-UPc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
